2005-06-23  Paul Eggert  <eggert@cs.ucla.edu>

	Fix some more shell quoting problems.  Prompted by a bug report
	from Justace Clutter.
	* lib/autoconf/general.m4 (_AC_INIT_DIRCHECK): Put name of invalid
	variable into diagnostic.  Make the diagnostic an error, not a warning,
	because we really don't support spaces and suchlike in dir names.
	(_AC_INIT_SRCDIR): Allow special characters in $ac_unique_file.
	Don't worry about backslashes in srcdir; it can't happen now.
	(_AC_INIT_PARSE_ARGS): Allow weird characters in ac_optarg.
	Simplify ac_optarg handling.
	(_AC_ARG_VAR_VALIDATE): Remove unnecessary and inconsistent quotes.

2005-06-22  Stepan Kasal  <kasal@ucw.cz>

	Fix AT_CONFIG_CMP for Solaris hosts; idea from Ralf Menzel.
	* configure.ac: Call AC_PROG_EGREP and AC_PROG_SED.
	* tests/atlocal.in: Propagate $EGREP and $SED.
	* tests/local.at (AT_CHECK_ENV): Use $EGREP, not $GREP -E.
	(AT_CONFIG_CMP): Use sed instead of grep plumbing.

	* doc/autoconf.texi (Limitations of Usual Tools) <grep>: Mention
	that '\|' is not allowed in BREs; recommend using newline separated
	list of patterns instead of multiple -e options.

	* lib/autoconf/fortran.m4 (_AC_PROG_FC_V_OUTPUT): Remove an old comment.

2005-06-22  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (_AC_CANONICAL_SPLIT): Use AC_SUBST/2.

2005-06-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/autoconf/general.m4 (_AC_CANONICAL_SPLIT): Fix typo.

2005-06-21  Stepan Kasal  <kasal@ucw.cz>

	* doc/autoconf.texi (Limitations of Usual Tools) <sed>: Document that
	b, t, r, w commands require single space, while : cannot have any.
	(Special Shell Variables): Fix sed code this in the example.
	* lib/autoconf/status.m4 (_AC_OUTPUT_HEADERS): Likewise; and fix a typo.
	* lib/autotest/general.m4 (AT_ARG_OPTION): Fix typo in the description.

2005-06-21  Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sugar.m4 (m4_split): If the parameter is empty,
	expand to the empty list.  Don't use two pairs of m4_changequote,