@@ -274,23 +274,23 @@ test -f state-ls.after && { AT_CMP([state-ls.before], [state-ls.after]) }
 if test -f state-env.before && test -f state-env.after; then
   for act_file in state-env.before state-env.after
   do
-    $EGREP -v -e 'm4_join([|],
-      [^a[cs]_],
-      [^((exec_)?prefix|DEFS|CONFIG_STATUS)=],
-      [^(CC|CFLAGS|CPP|GCC|CXX|CXXFLAGS|CXXCPP|GXX|F77|FFLAGS|FLIBS|G77)=],
-      [^(LIBS|LIB@&t@OBJS|LTLIBOBJS|LDFLAGS)=],
-      [^INSTALL(_(DATA|PROGRAM|SCRIPT))?=],
-      [^(CYGWIN|ISC|MINGW32|MINIX|EMXOS2|XENIX|EXEEXT|OBJEXT)=],
-      [^(X_(CFLAGS|(EXTRA_|PRE_)?LIBS)|x_(includes|libraries)|(have|no)_x)=],
-      [^(host|build|target)(_(alias|cpu|vendor|os))?=],
-      [^(cross_compiling)=],
-      [^(interpval|PATH_SEPARATOR)=],
-      [^(F77_DUMMY_MAIN|f77_(case|underscore))=],
-      [^(FC_DUMMY_MAIN|FC|FCFLAGS|FCLIBS|FCFLAGS_f)=],
-      [^(ALLOCA|GETLOADAVG_LIBS|KMEM_GROUP|NEED_SETGID|POW_LIB)=],
-      [^(AWK|LEX|LEXLIB|LEX_OUTPUT_ROOT|LN_S|M4|RANLIB|SET_MAKE|YACC)=],
-      [^(GREP|EGREP|FGREP|SED)=],
-      [^(_|@|.[*#?$].|LINENO|OLDPWD|PIPESTATUS|RANDOM|SECONDS)=])' \
+    $EGREP -v '^(m4_join([|],
+      [a[cs]_.*],
+      [(exec_)?prefix|DEFS|CONFIG_STATUS],
+      [CC|CFLAGS|CPP|GCC|CXX|CXXFLAGS|CXXCPP|GXX|F77|FFLAGS|FLIBS|G77],
+      [LIBS|LIB@&t@OBJS|LTLIBOBJS|LDFLAGS],
+      [INSTALL(_(DATA|PROGRAM|SCRIPT))?],
+      [CYGWIN|ISC|MINGW32|MINIX|EMXOS2|XENIX|EXEEXT|OBJEXT],
+      [X_(CFLAGS|(EXTRA_|PRE_)?LIBS)|x_(includes|libraries)|(have|no)_x],
+      [(host|build|target)(_(alias|cpu|vendor|os))?],
+      [cross_compiling],
+      [interpval|PATH_SEPARATOR],
+      [F77_DUMMY_MAIN|f77_(case|underscore)],
+      [FC(_DUMMY_MAIN|FLAGS|LIBS|FLAGS_f)?],
+      [ALLOCA|GETLOADAVG_LIBS|KMEM_GROUP|NEED_SETGID|POW_LIB],
+      [AWK|LEX|LEXLIB|LEX_OUTPUT_ROOT|LN_S|M4|RANLIB|SET_MAKE|YACC],
+      [GREP|[EF]GREP|SED],
+      [[_@]|.[*#?$].|LINENO|OLDPWD|PIPESTATUS|RANDOM|SECONDS]))=' \
      $act_file 2>/dev/null |
       # There may be variables spread on several lines; remove latter lines.
       $GREP '^m4_defn([m4_re_word])=' >clean-$act_file
